Fixed slogan font-size on mobile.

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -48,7 +48,7 @@ header #site-title {
 header #site-slogan {
     font-family: 'Caveat', cursive;
     color: #4BA0CA;
-    font-size: 1em;
+    font-size: 0.8em;
 }
 
 /************* Header Styles */
